--- a/NTwain/NTwain.nuspec
+++ b/NTwain/NTwain.nuspec
@@ -6,14 +6,14 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
+    <licenseUrl>https://bitbucket.org/soukoku/ntwain/src/15de55c6314f14ab2b1cb22f64397d9487c783d0/LICENSE.txt?at=master</licenseUrl>
     <projectUrl>https://bitbucket.org/soukoku/ntwain</projectUrl>
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>This release is updated for TWAIN 2.3.</releaseNotes>
+    <releaseNotes>V0.8 release is updated for TWAIN 2.3 and contains some renamed types.</releaseNotes>
     <copyright>$copyright$</copyright>
-    <tags>TWAIN</tags>
+    <tags>twain scan</tags>
   </metadata>
 	<files>
 		<file src="bin\$configuration$\$id$.pdb" target="lib\net35-client"/>
