--- a/NTwain/NTwain.csproj
+++ b/NTwain/NTwain.csproj
@@ -48,9 +48,6 @@
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="WindowsBase" />
@@ -60,7 +57,9 @@
     <Compile Include="DeviceEventArgs.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="DataTransferredEventArgs.cs" />
-    <Compile Include="ITwainSession.cs" />
+    <Compile Include="IMemoryManager.cs" />
+    <Compile Include="ITwainOperation.cs" />
+    <Compile Include="ITwainState.cs" />
     <Compile Include="MemoryManager.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -68,6 +67,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\VersionInfo.cs" />
+    <Compile Include="TentativeStateCommitable.cs" />
     <Compile Include="TransferReadyEventArgs.cs" />
     <Compile Include="Triplets\DGControl\DGControl.Callback2.cs" />
     <Compile Include="Triplets\DGImage\DGImage.Filter.cs" />
@@ -75,6 +75,7 @@
     <Compile Include="Triplets\PInvokes.32bit.cs" />
     <Compile Include="Triplets\PInvokes.64bit.cs" />
     <Compile Include="TwainSessionExtensions.cs" />
+    <Compile Include="TwainSessionBase.cs" />
     <Compile Include="TwainStateException.cs" />
     <Compile Include="Data\Types.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
