--- a/NTwain/NTwain.csproj
+++ b/NTwain/NTwain.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Triplets\DGControl\DGControl.Callback2.cs" />
     <Compile Include="Triplets\DGImage\DGImage.Filter.cs" />
     <Compile Include="Triplets\OpBase.cs" />
+    <Compile Include="Triplets\PInvoke.Linux.cs" />
     <Compile Include="Triplets\PInvoke.Win32.cs" />
     <Compile Include="Triplets\PInvoke.Win64.cs" />
     <Compile Include="TwainSessionExtensions.cs" />
