Added xfer error event instead of throwing exceptions during xfers.

--- a/NTwain/NTwain.csproj
+++ b/NTwain/NTwain.csproj
@@ -72,6 +72,7 @@
     </Compile>
     <Compile Include="Properties\VersionInfo.cs" />
     <Compile Include="TentativeStateCommitable.cs" />
+    <Compile Include="TransferErrorEventArgs.cs" />
     <Compile Include="TransferReadyEventArgs.cs" />
     <Compile Include="Triplets\DGControl\DGControl.Callback2.cs" />
     <Compile Include="Triplets\DGImage\DGImage.Filter.cs" />
