--- a/NTwain/NTwain.csproj
+++ b/NTwain/NTwain.csproj
@@ -53,7 +53,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsyncPump.cs" />
     <Compile Include="Data\CapReadOut.cs" />
     <Compile Include="Data\TypeReader.cs" />
     <Compile Include="Data\TypesExtended.cs" />
@@ -64,6 +63,7 @@
     <Compile Include="ITwainOperation.cs" />
     <Compile Include="ITwainState.cs" />
     <Compile Include="MemoryManager.cs" />
+    <Compile Include="MessageLoop.cs" />
     <Compile Include="NativeMethods.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -82,8 +82,6 @@
     <Compile Include="Triplets\Dsm.WinNew.cs" />
     <Compile Include="TwainSessionExtensions.cs" />
     <Compile Include="TwainSession.cs" />
-    <Compile Include="TwainSessionWPF.cs" />
-    <Compile Include="TwainSessionWinform.cs" />
     <Compile Include="TwainStateException.cs" />
     <Compile Include="Data\Types.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -125,7 +123,6 @@
     <Compile Include="Triplets\DGImage\DGImage.RgbResponse.cs" />
     <Compile Include="Triplets\Dsm.cs" />
     <Compile Include="TwainException.cs" />
-    <Compile Include="TwainSessionOld.cs" />
     <Compile Include="Values\DataValues.cs" />
     <Compile Include="Values\SourceEnableMode.cs" />
     <Compile Include="Values\TwainConst.cs" />
