--- a/NTwain.Net35/NTwain.Net35.csproj
+++ b/NTwain.Net35/NTwain.Net35.csproj
@@ -85,14 +85,14 @@
     <Compile Include="..\NTwain\Internals\MessageLoop.cs">
       <Link>Internals\MessageLoop.cs</Link>
     </Compile>
-    <Compile Include="..\NTwain\Internals\NativeMethods.cs">
-      <Link>Internals\NativeMethods.cs</Link>
-    </Compile>
     <Compile Include="..\NTwain\Internals\TentativeStateCommitable.cs">
       <Link>Internals\TentativeStateCommitable.cs</Link>
     </Compile>
     <Compile Include="..\NTwain\Internals\TransferLogic.cs">
       <Link>Internals\TransferLogic.cs</Link>
+    </Compile>
+    <Compile Include="..\NTwain\Internals\UnsafeNativeMethods.cs">
+      <Link>Internals\UnsafeNativeMethods.cs</Link>
     </Compile>
     <Compile Include="..\NTwain\Internals\WindowsHook.cs">
       <Link>Internals\WindowsHook.cs</Link>
