Added custom DAT with capability functions in ref to #9.

--- a/NTwain.Net35/NTwain.Net35.csproj
+++ b/NTwain.Net35/NTwain.Net35.csproj
@@ -151,6 +151,9 @@
     <Compile Include="..\NTwain\Triplets\DGControl\DGControl.Capability.cs">
       <Link>Triplets\DGControl\DGControl.Capability.cs</Link>
     </Compile>
+    <Compile Include="..\NTwain\Triplets\DGControl\DGControl.CapabilityCustom.cs">
+      <Link>Triplets\DGControl\DGControl.CapabilityCustom.cs</Link>
+    </Compile>
     <Compile Include="..\NTwain\Triplets\DGControl\DGControl.cs">
       <Link>Triplets\DGControl\DGControl.cs</Link>
     </Compile>
