--- a/NTwain/NTwain.csproj
+++ b/NTwain/NTwain.csproj
@@ -80,6 +80,7 @@
     <Compile Include="TransferErrorEventArgs.cs" />
     <Compile Include="TransferReadyEventArgs.cs" />
     <Compile Include="Triplets\DGControl\DGControl.Callback2.cs" />
+    <Compile Include="Triplets\DGControl\DGControl.CapabilityCustom.cs" />
     <Compile Include="Triplets\DGImage\DGImage.Filter.cs" />
     <Compile Include="Triplets\OpBase.cs" />
     <Compile Include="Triplets\Dsm.Linux.cs" />
