--- a/NTwain/NTwain.csproj
+++ b/NTwain/NTwain.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Triplets\DGControl\DGControl.Callback2.cs" />
     <Compile Include="Triplets\DGControl\DGControl.CapabilityCustom.cs" />
     <Compile Include="Triplets\DGImage\DGImage.Filter.cs" />
+    <Compile Include="Triplets\DGCustom.cs" />
     <Compile Include="Triplets\OpBase.cs" />
     <Compile Include="Triplets\Dsm.Linux.cs" />
     <Compile Include="Triplets\Dsm.WinOld.cs" />
