--- a/NTwain.Net35/NTwain.Net35.csproj
+++ b/NTwain.Net35/NTwain.Net35.csproj
@@ -43,8 +43,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\NTwain\CapabilityReadout.cs">
-      <Link>CapabilityReadout.cs</Link>
+    <Compile Include="..\NTwain\CapabilityReader.cs">
+      <Link>CapabilityReader.cs</Link>
     </Compile>
     <Compile Include="..\NTwain\DataTransferredEventArgs.cs">
       <Link>DataTransferredEventArgs.cs</Link>
