--- a/NTwain/NTwain.csproj
+++ b/NTwain/NTwain.csproj
@@ -52,7 +52,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CapabilityReadout.cs" />
+    <Compile Include="CapabilityReader.cs" />
     <Compile Include="Data\TypeReader.cs" />
     <Compile Include="Data\TwainTypesExtended.cs" />
     <Compile Include="DeviceEventArgs.cs" />
