First changeset to make internal message loop non-global.

--- a/NTwain.Net35/NTwain.Net35.csproj
+++ b/NTwain.Net35/NTwain.Net35.csproj
@@ -79,6 +79,9 @@
     <Compile Include="..\NTwain\Internals\ITwainSessionInternal.cs">
       <Link>Internals\ITwainSessionInternal.cs</Link>
     </Compile>
+    <Compile Include="..\NTwain\Internals\MESSAGE.cs">
+      <Link>Internals\MESSAGE.cs</Link>
+    </Compile>
     <Compile Include="..\NTwain\Internals\MessageLoop.cs">
       <Link>Internals\MessageLoop.cs</Link>
     </Compile>
@@ -102,6 +105,9 @@
     </Compile>
     <Compile Include="..\NTwain\ITwainSession.cs">
       <Link>ITwainSession.cs</Link>
+    </Compile>
+    <Compile Include="..\NTwain\IWinMessageFilter.cs">
+      <Link>IWinMessageFilter.cs</Link>
     </Compile>
     <Compile Include="..\NTwain\Platform.cs">
       <Link>Platform.cs</Link>
