--- a/NTwain/NTwain.csproj
+++ b/NTwain/NTwain.csproj
@@ -48,7 +48,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -60,6 +63,7 @@
     <Compile Include="DataTransferredEventArgs.cs" />
     <Compile Include="IMemoryManager.cs" />
     <Compile Include="Internals\ICommittable.cs" />
+    <Compile Include="Internals\InternalMessageLoopHook.cs" />
     <Compile Include="Internals\ITwainSessionInternal.cs" />
     <Compile Include="Internals\MESSAGE.cs" />
     <Compile Include="Internals\TransferLogic.cs" />
@@ -67,9 +71,9 @@
     <Compile Include="Internals\WrappedManualResetEvent.cs" />
     <Compile Include="ITwainSession.cs" />
     <Compile Include="Internals\WinMemoryManager.cs" />
-    <Compile Include="Internals\MessageLoop.cs" />
     <Compile Include="Internals\UnsafeNativeMethods.cs" />
-    <Compile Include="IWinMessageFilter.cs" />
+    <Compile Include="Internals\IWinMessageFilter.cs" />
+    <Compile Include="MessageLoopHooks.cs" />
     <Compile Include="Platform.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
